@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.995-13
-Date: 2006-07-..
+Date: 2006-08-03
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -11,7 +11,8 @@ Imports: graphics, lattice, grid, stats
 Suggests: mlmRev, MASS, coda
 SystemRequirements: GNU make
 LazyLoad: yes
-LazyData: yes
+LazyData: no
+LazyDataNote: no longer available, since we use data/*.R
 License: GPL version 2 or later.
  This R package includes code from the Metis package and from NIST.
  This code is covered by separate copyrights; see the file Copyrights
